# SEU-Robomasters2017

./: README.md
RM/: Chariot.cpp  Chariot.h  README.md
RM/Aircraft/: README.md
RM/Chariot/: README.md
RM/Chariot/ComputerVision/: README.md
RM/Chariot/ComputerVision/Manifold-STM32/: Chariot.cpp  Chariot.h  ChariotEx.cpp  ChariotEx.h  Demo.cpp  Makefile  Run.cfg  SourcesFormat.txt
RM/Chariot/ComputerVision/Manifold-STM32/Release/: Run.out
RM/Chariot/ComputerVision/Soldier/: Chariot.cpp  Chariot.h  Run.cfg  ver.txt
RM/Chariot/ElectronicControl/: README.md
RM/Chariot/Manifold-STM32/: CConfig.cpp  Chariot.cpp  Chariot.h  README.md
RM/Chariot/MechanicalStructure/: README.md
RM_P/: README.md
RM_P/Aircraft/: README.md
RM_P/Aircraft/2017Robomaster/M100/: key.txt
armor/: CMakeLists.txt  armor.cpp  armor.h  main.cpp
armor-sample/blue/positive/: info.txt
armor-with-classifier/: CMakeLists.txt  armor_sample_marker.cpp  armor_sample_marker.h  main.cpp
armor/testImage/: ￼.textClipping
armor_marker/: armor_marker.py  info_generator.py  negative_sample.py  performance_test.py
armor_with_circle/: armor.cpp  armor.h  main.cpp
armor_with_circle的副本/: CMakeLists.txt  armor.cpp  main.cpp
pyArmor/: CMakeLists.txt  pyArmor.cpp  pyArmor.h
